--- a/Source/Lottie/CMakeLists.txt
+++ b/Source/Lottie/CMakeLists.txt
@@ -2,17 +2,6 @@
 #
 # Although not necessary, header files are also included to improve IntelliSense
 # capabilities on IDEs and language servers
-#
-# Tip: On UNIX systems you can run this on the current source folder to get the
-# entire list of files in the folder copied on the files.txt file:
-#
-#       ls *.cpp *.h > files.txt
-#
-# After running it, you can copy the text in that file and paste it here as a list
-# of source files
-#
-# Quoting the source file paths isn't necessary because list() doesn't read
-# CMake variables, just strings
 add_library(rmlui_lottie INTERFACE)
 
 # Set C++14 as requirement
@@ -23,14 +12,14 @@ target_compile_features(rmlui_lottie INTERFACE "cxx_std_14")
 # Relative paths can be used once the minimum CMake version is greater or
 # equal than CMake 3.13
 target_sources(rmlui_lottie INTERFACE
-    ${CMAKE_CURRENT_SOURCE_DIR}/ElementLottie.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/LottiePlugin.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/LottiePlugin.h
+    "${CMAKE_CURRENT_SOURCE_DIR}/ElementLottie.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/LottiePlugin.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/LottiePlugin.h"
 )
 
 # Add public headers as files in the project (it's not necessary but convenient for IDE integration)
 target_sources(rmlui_lottie INTERFACE
-    ${PROJECT_SOURCE_DIR}/Include/RmlUi/Lottie/ElementLottie.h
+    "${PROJECT_SOURCE_DIR}/Include/RmlUi/Lottie/ElementLottie.h"
 )
 
 # Link library against rlottie
