Make the unit tests runnable with RTTI disabled

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -23,6 +23,13 @@ include_dependency("nanobench")
 include_dependency("lodepng")
 include_dependency("trompeloeil")
 
+if(MSVC)
+	target_compile_definitions(doctest::doctest INTERFACE DOCTEST_CONFIG_USE_STD_HEADERS)
+endif()
+if(DISABLE_RTTI_AND_EXCEPTIONS)
+	target_compile_definitions(doctest::doctest INTERFACE DOCTEST_CONFIG_NO_EXCEPTIONS_BUT_WITH_ALL_ASSERTS)
+endif()
+
 #===================================
 # Common source files ==============
 #===================================
@@ -40,10 +47,6 @@ file(GLOB UnitTests_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/Source/UnitTests/*.cpp
 add_executable(UnitTests ${UnitTests_HDR_FILES} ${UnitTests_SRC_FILES})
 target_link_libraries(UnitTests RmlCore RmlDebugger doctest::doctest trompeloeil::trompeloeil ${sample_LIBRARIES})
 add_common_target_options(UnitTests)
-
-if(MSVC)
-	target_compile_definitions(UnitTests PUBLIC DOCTEST_CONFIG_USE_STD_HEADERS)
-endif()
 
 doctest_discover_tests(UnitTests)
 
@@ -75,10 +78,6 @@ if(VISUAL_TESTS_CAPTURE_DIRECTORY)
 	target_compile_definitions(VisualTests PRIVATE RMLUI_VISUAL_TESTS_CAPTURE_DIRECTORY="${VISUAL_TESTS_CAPTURE_DIRECTORY}")
 endif()
 
-if(MSVC)
-	target_compile_definitions(VisualTests PUBLIC DOCTEST_CONFIG_USE_STD_HEADERS)
-endif()
-
 
 
 #===================================
@@ -91,10 +90,6 @@ file(GLOB Benchmarks_SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/Source/Benchmarks/*.c
 add_executable(Benchmarks ${Benchmarks_HDR_FILES} ${Benchmarks_SRC_FILES} ${TestsCommon_HDR_FILES} ${TestsCommon_SRC_FILES})
 target_link_libraries(Benchmarks RmlCore RmlDebugger doctest::doctest nanobench::nanobench ${sample_LIBRARIES})
 add_common_target_options(Benchmarks)
-
-if(MSVC)
-	target_compile_definitions(Benchmarks PUBLIC DOCTEST_CONFIG_USE_STD_HEADERS)
-endif()
 
 
 
