Correct logic for the Freetype pre-proc definition
Previous changes only involved the name of the definition, but not its
logic on the source files that referenced it nor code on the CMake files

--- a/Source/Core/CMakeLists.txt
+++ b/Source/Core/CMakeLists.txt
@@ -374,8 +374,8 @@ if(RMLUI_FONT_INTERFACE STREQUAL "freetype")
     # the build system if the default font interface is disabled
     add_subdirectory("FontEngineDefault")
     target_link_libraries(rmlui_core PRIVATE rmlui_core_fontenginedefault)
-else()
-    # Pass information to code via compile definition
+
+    # Pass information to code via pre-processor definition
     target_compile_definitions(rmlui_core PRIVATE "RMLUI_FONT_INTERFACE_FREETYPE")
 endif()
 
